Updated Meet Us photos

--- a/www.topmonks.com/src/html/meet-us/index.html
+++ b/www.topmonks.com/src/html/meet-us/index.html
@@ -23,8 +23,12 @@
       <div class="mdc-layout-grid__inner">
         <div
           class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <img class="tm-meetup__img" alt="TopMonks Caffè logo"
-               src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428/v1544791905/topmonks.com/Meet-us/tm-caffe.png">
+          <img class="tm-meetup__img" alt="TopMonks Caffè"
+               src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,q_100/v1560325094/topmonks.com/Meet-us/tm-caffe-new.jpg"
+               srcset="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,dpr_1/v1560325094/topmonks.com/Meet-us/tm-caffe-new.jpg 1x,
+                       https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,dpr_1.5/v1560325094/topmonks.com/Meet-us/tm-caffe-new.jpg 1.5x,
+                       https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,dpr_2/v1560325094/topmonks.com/Meet-us/tm-caffe-new.jpg 2x,
+                       https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,dpr_3/v1560325094/topmonks.com/Meet-us/tm-caffe-new.jpg 3x">
         </div>
         <div
           class="tm-meetup__cell tm-events_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -33,7 +37,7 @@
             are interested in. Balanced mix of technical and soft themes delivered by our
             speakers and special guests.</p>
 
-          <div class="links"><a href="https://caffe.topmonks.cz">CHECK OUT LATEST CAFFE</a>
+          <div class="links"><a href="https://caffe.topmonks.cz/" hreflang="cs">CHECK OUT LATEST CAFFE</a>
           </div>
         </div>
       </div>
@@ -43,7 +47,11 @@
         <div
           class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <img class="tm-meetup__img" alt="Photo of TopMonks breakfast"
-               src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428/v1544798416/topmonks.com/Meet-us/tm-breakfast.png">
+               src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,q_100/v1560325744/topmonks.com/Meet-us/tm-breakfast-1.jpg"
+               srcset="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,dpr_1/v1560325744/topmonks.com/Meet-us/tm-breakfast-1.jpg 1x,
+                       https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,dpr_1.5/v1560325744/topmonks.com/Meet-us/tm-breakfast-1.jpg 1.5x,
+                       https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,dpr_2/v1560325744/topmonks.com/Meet-us/tm-breakfast-1.jpg 2x,
+                       https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,dpr_3/v1560325744/topmonks.com/Meet-us/tm-breakfast-1.jpg 3x">
         </div>
         <div
           class="tm-meetup__cell tm-events_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -62,7 +70,11 @@
         <div
           class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <img class="tm-meetup__img" alt="Photo from Startup Stage"
-               src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428/v1544798429/topmonks.com/Meet-us/startup.png">
+               src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto/v1544798429/topmonks.com/Meet-us/startup.png"
+               srcset="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto/v1544798429/topmonks.com/Meet-us/startup.png 1x,
+                       https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,dpr_1.5/v1544798429/topmonks.com/Meet-us/startup.png 1.5x,
+                       https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,dpr_2/v1544798429/topmonks.com/Meet-us/startup.png 2x,
+                       https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,dpr_3/v1544798429/topmonks.com/Meet-us/startup.png 3x">
         </div>
         <div
           class="tm-meetup__cell tm-events_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -81,7 +93,11 @@
         <div
           class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <img class="tm-meetup__img" alt="Photo from CZ Podcast"
-               src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428/v1544798611/topmonks.com/Meet-us/podcast.png">
+               src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto/v1544798611/topmonks.com/Meet-us/podcast.png"
+               srcset="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto/v1544798611/topmonks.com/Meet-us/podcast.png 1x,
+                       https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,dpr_1.5/v1544798611/topmonks.com/Meet-us/podcast.png 1.5x,
+                       https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,dpr_2/v1544798611/topmonks.com/Meet-us/podcast.png 2x,
+                       https://res.cloudinary.com/topmonks/image/upload/c_scale,h_273,w_428,f_auto,dpr_3/v1544798611/topmonks.com/Meet-us/podcast.png 3x">
         </div>
         <div
           class="tm-meetup__cell tm-events_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -108,17 +124,17 @@
       <div
         class="other-events_logos mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-desktop">
         <a class="img-link" href="http://block-stars.com/"><img class="tm-meetup__img" alt="Blockstars logo"
-                                                                src="https://res.cloudinary.com/topmonks/image/upload/v1544789647/loga/logo_blockstars.png"
+                                                                src="https://res.cloudinary.com/topmonks/image/upload/f_auto/v1544789647/loga/logo_blockstars.png"
                                                                 style="width: 219px"></a>
         <a class="img-link" href="http://www.wisephora.com/"><img class="tm-meetup__img" alt="Wisephora logo"
-                                                                  src="https://res.cloudinary.com/topmonks/image/upload/v1544789648/loga/logo_wisephora.png"
+                                                                  src="https://res.cloudinary.com/topmonks/image/upload/f_auto/v1544789648/loga/logo_wisephora.png"
                                                                   style="width: 219px"></a>
         <a class="img-link" href="https://coderetreat.cz/"><img class="tm-meetup__img" alt="Code Retreat CZ logo"
-                                                                src="https://res.cloudinary.com/topmonks/image/upload/v1544789647/loga/logo_crcz.png"
+                                                                src="https://res.cloudinary.com/topmonks/image/upload/f_auto/v1544789647/loga/logo_crcz.png"
                                                                 style="width: 219px"></a>
         <a class="img-link" href="https://www.meetup.com/Lambda-Meetup-Group/"><img class="tm-meetup__img"
                                                                                     alt="Prague Lambda logo"
-                                                                                    src="https://res.cloudinary.com/topmonks/image/upload/v1544789647/loga/logo_praguelambda.png"
+                                                                                    src="https://res.cloudinary.com/topmonks/image/upload/f_auto/v1544789647/loga/logo_praguelambda.png"
                                                                                     style="width: 219px"></a>
       </div>
       <div
