--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -1,5 +1,6 @@
 {% extends 'layouts/topmonks.html' %}
 {% from 'macros/helpers.html' import sprite %}
+{% from 'macros/helpers.html' import avatar %}
 
 {% set page = 'topmonks-index' %}
 {% set language = en %}
@@ -543,43 +544,19 @@ TopMonks - Software development partner for your business
           Contact&nbsp;us.</p>
       </div>
       <div
-        class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
-        itemprop="employee" itemscope="" itemtype="https://schema.org/Person"><h3><b>US Sales</b></h3>
-        <p class="box_text-about">We are open for new deals and experiences in the United States. In case you have
-          something interesting to say, contact Simona.</p>
-        <div class="mdc-layout-grid__inner">
-          <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <img alt="[foto] Simona Zábržová"
-                 src="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/simona-zabrzova"
-                 srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/simona-zabrzova 1x,
-                         https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1.5,f_auto/https://insight.topmonks.com/avatar/simona-zabrzova 1.5x,
-                         https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_2,f_auto/https://insight.topmonks.com/avatar/simona-zabrzova 2x,
-                         https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_3,f_auto/https://insight.topmonks.com/avatar/simona-zabrzova 3x"
-                 onerror="this.onerror=null; this.src='/assets/img/monk_logo-c877778634.png'"
-                 width="112" height="112"></div>
-          <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <p><span itemprop="name">Simona Zábržová</span><br>
-              <a itemprop="telephone" href="tel:+420777285544">+420 777 285 544</a><br>
-              <a itemprop="email" href="mailto:simona.zabrzova&#64;topmonks.com">simona.zabrzova@​topmonks.com</a></p>
-          </div>
-        </div>
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-0-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
       </div>
 
       <div
-        class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
-        itemprop="employee" itemscope="" itemtype="https://schema.org/Person"><h3><b>Sales</b></h3>
+        class="box box-member mdc-layout-grid__cell  mdc-layout-grid__cell--span-6-desktop"
+        itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
+        <h3>Sales</h3>
         <p class="box_text-about">If you're medium or large size organization and you're looking to solve
           existing challenge, please get in touch with&nbsp;Ondrej.</p>
         <div class="mdc-layout-grid__inner">
-          <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4"><img
-            alt="[foto] Ondrej Tupý"
-            src="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy"
-            srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 1x,
-                    https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1.5,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 1.5x,
-                    https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_2,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 2x,
-                    https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_3,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 3x"
-            onerror="this.onerror=null; this.src='/assets/img/monk_logo-c877778634.png'"
-            width="112" height="112"></div>
+          <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+            {{ avatar(members['ondrej-tupy'], 112) }}
+          </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
             <p><span itemprop="name">Ondrej Tupý</span><br>
               <a itemprop="telephone" href="tel:+420730581488">+420&nbsp;730&nbsp;581&nbsp;488</a><br>
@@ -590,6 +567,5 @@ TopMonks - Software development partner for your business
     </div>
   </div>
 </section>
-
 
 {% endblock %}
