--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -542,34 +542,27 @@
         <p>Máte dotaz nebo zájem o&nbsp;spolupráci? Ozvěte se nám.</p>
       </div>
       <div
-        class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
-        itemprop="employee" itemscope="" itemtype="https://schema.org/Person"><h3><b>US Sales</b></h3>
-        <p class="box_text-about">Jsme otevření novým příležitostem a zkušenostem i&nbsp;v&nbsp;USA. Pokud pro
-          nás máte zajímavý projekt, kontaktujte Simonu.</p>
-        <div class="mdc-layout-grid__inner">
-          <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <img alt="[foto] Simona Zábržová"
-                 src="https://insight.topmonks.com/avatar/simona-zabrzova"
-                 onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'"
-                 width="112" height="112"></div>
-          <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <p><span itemprop="name">Simona Zábržová</span><br><a itemprop="telephone" href="tel:+420777285544">+420 777 285 544</a><br>
-              <a itemprop="email" href="mailto:simona.zabrzova&#64;topmonks.com">simona.zabrzova@​topmonks.com</a></p>
-          </div>
-        </div>
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-0-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
       </div>
 
       <div
         class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
-        itemprop="employee" itemscope="" itemtype="https://schema.org/Person"><h3><b>Sales</b></h3>
+        itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
+        <h3>Sales</h3>
         <p class="box_text-about">Pokud jste střední nebo velká firma, obraťte se na Ondřeje. Pomůžeme
           vám najít řešení problému, kterému aktuálně čelíte.</p>
         <div class="mdc-layout-grid__inner">
-          <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4"><img
-            alt="[foto] Ondrej Tupý"
-            src="https://insight.topmonks.com/avatar/ondrej-tupy"
-            onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'"
-            width="112" height="112"></div>
+          <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+            <img
+              alt="[foto] Ondrej Tupý"
+              height="112"
+              onerror="this.onerror=null; this.src='/assets/img/monk_logo-c877778634.png'"
+              src="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy"
+              srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 1x,
+                      https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1.5,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 1.5x,
+                      https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_2,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 2x,
+                      https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_3,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 3x" width="112">
+          </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8"><p><span itemprop="name">Ondrej Tupý</span><br><a
             itemprop="telephone" href="tel:+420730581488">+420&nbsp;730&nbsp;581&nbsp;488</a><br><a itemprop="email"
                                                                                                     href="mailto:sales@topmonks.com">sales@​topmonks.com</a>
