Add Buidl on Contacts page

--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -172,7 +172,7 @@
         <h3>Blockchain studio</h3>
         <p class="box_text-about">If you are ready to
           <a href="https://blockchain.topmonks.com">bring blockchain to your business</a>,
-          don't hesitate to contact Lea.</p>
+          don't hesitate to contact Lea. Let's BUIDL together.</p>
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell">
             {{ avatar(members['lea-petrasova'], 112) }}
