Překlepy, doplněný nadpis pro v2

--- a/www.topmonks.cz/src/html/v2/index.html
+++ b/www.topmonks.cz/src/html/v2/index.html
@@ -151,7 +151,7 @@
 </svg>
 
         <h3>UX analýza</h3>
-        <p>Spojujeme naše skusenosti, tvrdé data, know-how a uživatelské testování s vaším byznysem. Poskytneme vám soubor akčních kroků, které budou vést ke <strong>zvýšení konverzního poměru a ROI</strong> vašeho produktu nebo stránky.</p>
+        <p>Spojujeme naše zkušenosti, tvrdá data, know-how a uživatelské testování s vaším byznysem. Poskytneme vám soubor akčních kroků, které budou vést ke <strong>zvýšení konverzního poměru a ROI</strong> vašeho produktu nebo stránky.</p>
       </div>
       <div class="mdc-layout-grid__cell box">
         <svg width="152" height="148" viewBox="0 0 152 148" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -225,7 +225,7 @@
         <h3>Analýza výkonu</h3>
         <p>Lidé stále častě navštěvují weby z mobilních zařízení,
           kterým na staré postupy tvorby webů nestačí dech. Umíme najít slabá místa
-          a vdechnout vaším stránkám nový život. <strong>Proč jezdit se zataženou ruční brzdou?</strong></p>
+          a vdechnout vašim stránkám nový život. <strong>Proč jezdit se zataženou ruční brzdou?</strong></p>
       </div>
       <div class="center-cta mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a class="action-button jumbotron__cta" href="#kontakt">Chci optimalizovat web</a>
@@ -318,7 +318,7 @@
 
           <h3>Konec nevýhodným kontraktům</h3>
           <p>Dejte vašim obchodníkům do ruky nástroj, který jim okamžitě ukáže výhodnost právě domlouvaného kontraktu.
-          Pomůžeme vám identifikovat toxické a dlouhodobě nevýhodné smlouvy. Začnětě
+          Pomůžeme vám identifikovat toxické a dlouhodobě nevýhodné smlouvy. Začněte
           na jednom místě pravidelně sledovat stav prodejů oproti nasmlouvaným rabatům.
          </p>
         </div>
@@ -421,7 +421,7 @@
 <path fill-rule="evenodd" clip-rule="evenodd" d="M121.65 13.423L117.442 17.574C116.86 18.153 116.851 19.099 117.425 19.684V19.684C117.713 19.982 118.095 20.131 118.482 20.131V20.131C118.856 20.131 119.234 19.992 119.525 19.707V19.707L123.733 15.557C124.316 14.977 124.325 14.031 123.751 13.446V13.446C123.463 13.148 123.079 13 122.693 13V13C122.317 13 121.94 13.141 121.65 13.423V13.423Z" fill="#E2879E"/>
 </svg>
 
-      <h3>Doplniť nadpis</h3>
+      <h3>Bezpečné IT</h3>
       <p>Jedním z nejčastějších bezpečnostních rizik je únik informací zevnitř, byť ne záměrný.
          Jak v týmu sdílíte hesla? Běží vaše neprodukční prostředí v továrním nastavení?
          Má váš tým prostor se věnovat bezpečnosti? Projdeme s vámi klíčové prvky,
