change of sales contact

--- a/www.topmonks.cz/src/html/o-nas/index.html
+++ b/www.topmonks.cz/src/html/o-nas/index.html
@@ -69,7 +69,7 @@
         </div>
         {{ macros.teamMember(members['jiri-fabian'], true) }}
         {{ macros.teamMember(members['anna-kovacsova'], true) }}
-        {{ macros.teamMember(members['ladislav-gerencsery'] , true) }}
+        {{ macros.teamMember(members['ondrej-tupy'] , true) }}
         {{ macros.teamMember(members['lea-petrasova'], true) }}
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <div class="mdc-layout-grid tm-team__members">
