fixed Meetup link

--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -175,7 +175,7 @@
           <h1>TopMonks Caffé</h1>
           <p>Přednášky a diskuze každý první čtvrtek v&nbsp;měsíci se zajímavými
             lidmi a o&nbsp;tématech, která nás&nbsp;baví.<br>
-            Přihlaš se přes stránky <a class="link" href="https://www.meetup.com/TopMonks-Caffe/events/258122001/">
+            Přihlaš se přes stránky <a class="link" href="http://meetu.ps/c/2GNS0/cSTNb/d">
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
                    y="0px"
