linking main.css stylesheet

--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -10,6 +10,7 @@
         content="We help you to create and scale your own digital economy, such as wallet and stable currency. Have a digital marketplace where you can be discovered.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://balehu.com/">
+  <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
 <body>
 <header>
