Basic layout wrapper width

--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <header>
-  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
+  <div class="tm-layout-wrapper">
     <nav id="navigation" class="">
       <ul class="menu_list">
         <li>
