Grid cells order for mobile for slider section

--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header>
-  <div class="tm-layout-wrapper">
+  <div class="bl-layout-wrapper">
     <nav id="navigation" class="">
       <ul class="menu_list">
         <li>
@@ -32,7 +32,7 @@
   </div>
 </header>
 <section id="intro" class="">
-  <div class="mdc-layout-grid tm-layout-wrapper">
+  <div class="mdc-layout-grid bl-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a class="logo" href="/" title="Logo Balehu">Balehu
@@ -43,34 +43,36 @@
   </div>
 </section>
 <section>
-  <div class="mdc-layout-grid tm-layout-wrapper">
+  <div class="mdc-layout-grid bl-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Create &amp; scale your own digital economy</h2>
       </div>
-      <div class="mdc-layout-grid__cell">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 bl-layout--order-1-mobile ">
         <h3>Digital marketplace</h3>
         <p>Shopping, ordering, and marketing solutions including custom promotions,
           loyalty, and gift&nbsp;cards</p>
         <h3>Digital wallet</h3>
         <p>Instant &amp; secure low cost transactions</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <ul class="my-slider">
+          <li><img src="../images/slider/01.png"></li>
+          <li><img src="../images/slider/02.png"></li>
+          <li><img src="../images/slider/03.png"></li>
+        </ul>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <h3>Stable digital currency</h3>
         <p>Pegged 1:1 with any fiat currency</p>
         <h3>Data ownership</h3>
         <p>Consumers make money from selling there transaction&nbsp;data</p>
       </div>
-      <div class="mdc-layout-grid__cell">
-        <ul class="my-slider">
-          <li><img src="../images/slider/01.png" width="222"></li>
-          <li><img src="../images/slider/02.png" width="222"></li>
-          <li><img src="../images/slider/03.png" width="222"></li>
-        </ul>
-      </div>
     </div>
   </div>
 </section>
 <section>
-  <div class="mdc-layout-grid tm-layout-wrapper">
+  <div class="mdc-layout-grid bl-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Get started for free.<br>See how much we can save your business on&nbsp;fees.</h2>
@@ -85,7 +87,7 @@
   </div>
 </section>
 <section>
-  <div class="mdc-layout-grid tm-layout-wrapper">
+  <div class="mdc-layout-grid bl-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>How your business benefits</h2>
@@ -124,7 +126,7 @@
   </div>
 </section>
 <section>
-  <div class="mdc-layout-grid tm-layout-wrapper">
+  <div class="mdc-layout-grid bl-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Get started Today</h2>
@@ -134,26 +136,28 @@
   </div>
 </section>
 <footer>
-  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-2-desktop">
-    <div class="social-btn">
-      <a href="https://balehu.com" title="Balehu" rel="me" itemprop="sameAs" class="Balehu">
-      </a>
+  <div class="bl-layout-wrapper">
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-2-desktop">
+      <div class="social-btn">
+        <a href="https://balehu.com" title="Balehu" rel="me" itemprop="sameAs" class="Balehu">
+        </a>
+      </div>
     </div>
-  </div>
-  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
-    <nav class="navigation">
-      <ul class="menu_list">
-        <li>
-          <a href="#next-event">Home</a>
-        </li>
-        <li>
-          <a href="#seance">Contact</a>
-        </li>
-        <li>
-          <a href="#speakers">Get started for free</a>
-        </li>
-      </ul>
-    </nav>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
+      <nav class="navigation">
+        <ul class="menu_list">
+          <li>
+            <a href="#next-event">Home</a>
+          </li>
+          <li>
+            <a href="#seance">Contact</a>
+          </li>
+          <li>
+            <a href="#speakers">Get started for free</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.1/min/tiny-slider.js"></script>
