slider autoplay configuration and controll position

--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -167,7 +167,9 @@
     slideBy: 'page',
     autoplay: true,
     navPosition: 'bottom',
-    controls: false
+    autoplayPosition: 'bottom',
+    controls: false,
+    "autoplayText": [ "▶", "❚❚" ]
   });
 </script>
 </body>
