Balehu html + css

--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -15,29 +15,34 @@
 </head>
 <body>
 <header>
-  <div class="bl-layout-wrapper">
-    <nav id="navigation" class="">
-      <ul class="menu_list">
-        <li>
-          <a href="#next-event">Home</a>
-        </li>
-        <li>
-          <a href="#seance">Contact</a>
-        </li>
-        <li>
-          <a href="#speakers">Get started for free</a>
-        </li>
-      </ul>
-    </nav>
+  <div class="mdc-layout-grid bl-layout-wrapper">
+    <div class="mdc-layout-grid__inner">
+      <div class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <a class="logo" href="/" title="Logo Balehu">Balehu</a>
+      </div>
+      <div class="menu mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+        <nav id="navigation" class="">
+          <ul class="menu_list">
+            <li>
+              <a href="#next-event">Home</a>
+            </li>
+            <li>
+              <a href="#seance">Contact</a>
+            </li>
+            <li>
+              <a href="#speakers">Get started for free</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
   </div>
 </header>
 <section id="intro" class="">
   <div class="mdc-layout-grid bl-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a class="logo" href="/" title="Logo Balehu">Balehu
-        </a>
-        <h2>Powering Merchants, Empowering Consumers</h2>
+        <h1>Powering Merchants, Empowering Consumers</h1>
       </div>
     </div>
   </div>
