--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -53,6 +53,7 @@
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2 class="title_center">Create &amp; scale your <br>own digital economy</h2>
+        <img src="../images/digital_bgnd.png" width="100%">
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 bl-layout--order-1-mobile ">
         <div class="upper-text">
@@ -166,7 +167,7 @@
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-2-desktop">
       <div class="social-btn">
         <a href="https://balehu.com" title="Balehu" rel="me" itemprop="sameAs" class="Balehu">
-
+          <img src="../images/balehu.jpg" width="48" height="48">
         </a>
       </div>
     </div>
