Balehu - footer, menu

--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -163,28 +163,28 @@
   </div>
 </section>
 <footer>
-  <div class="bl-layout-wrapper">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-2-desktop">
-      <div class="social-btn">
-        <a href="https://balehu.com" title="Balehu" rel="me" itemprop="sameAs" class="Balehu">
-          <img src="../images/balehu.jpg" width="48" height="48">
-        </a>
+  <div class="mdc-layout-grid bl-layout-wrapper">
+    <div class="mdc-layout-grid__inner">
+      <div class="social-icon mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
+          <a href="https://balehu.com" title="Balehu" rel="me" itemprop="sameAs" class="Balehu">
+            <img src="../images/balehu.jpg" width="52" height="52">
+          </a>
       </div>
-    </div>
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
-      <nav class="navigation">
-        <ul class="menu_list">
-          <li>
-            <a href="#next-event">Home</a>
-          </li>
-          <li>
-            <a href="#seance">Contact</a>
-          </li>
-          <li>
-            <a href="#speakers">Get started for free</a>
-          </li>
-        </ul>
-      </nav
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-6-desktop">
+        <nav class="navigation">
+          <ul class="menu_list">
+            <li>
+              <a href="#next-event">Home</a>
+            </li>
+            <li>
+              <a href="#seance">Contact</a>
+            </li>
+            <li>
+              <a href="#speakers">Get started for free</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </div>
 </footer>
