Font link introduced

--- a/balehu.topmonks.com/src/html/index.html
+++ b/balehu.topmonks.com/src/html/index.html
@@ -10,6 +10,10 @@
         content="We help you to create and scale your own digital economy, such as wallet and stable currency. Have a digital marketplace where you can be discovered.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://balehu.com/">
+
+  <script>WebFontConfig = { typekit: {id: 'dlz5yfx'}, async: true }</script>
+  <script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.1/tiny-slider.css">
 </head>
